--- a/index.ipynb
+++ b/index.ipynb
@@ -29,11 +29,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "P_r = (4/10 * 1/2) + (6/10 * 1/2) # 4 red, 6 green (10 total) * 50/50 chance coin toss\n",
+    "P_r"
    ]
   },
   {
@@ -53,7 +66,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "# P_w = P(w|sf) * P(sf) + P(w|sf_c)\n",
+    "#      60%.   30%.    10%.    100-30=70%\n",
+    "P_w = (6/10 * 3/10) + (1/10 * 7/10)"
    ]
   },
   {
@@ -88,11 +104,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.21\n",
+      "0.45499999999999996\n",
+      "0.26373626373626374\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "super_95 = 0.35 * 0.6\n",
+    "print(super_95)\n",
+    "\n",
+    "#-----\n",
+    "diesel = 0.4 * 0.3\n",
+    "super_98 = 0.25 * 0.5\n",
+    "\n",
+    "P_full = diesel + super_95 + super_98\n",
+    "print(P_full)\n",
+    "\n",
+    "#-----\n",
+    "P_diesel = diesel / P_full\n",
+    "print(P_diesel)"
    ]
   },
   {
@@ -122,11 +161,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.034999999999999996\n",
+      "0.965\n",
+      "0.45\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "P_all = 0.25 * 0.4 * 0.35\n",
+    "print(P_all)\n",
+    "\n",
+    "P_one_not = 1 - P_all\n",
+    "print(P_one_not)\n",
+    "\n",
+    "P_a = 0.4 * 0.75 * 0.65 # (1-0.25) * (1-0.35)\n",
+    "P_b = 0.6 * 0.25 * 0.65\n",
+    "P_c = 0.6 * 0.75 * 0.35\n",
+    "P_one = P_a + P_b + P_c\n",
+    "print(P_one)"
    ]
   },
   {
@@ -147,11 +207,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "P = (0.75 * 1/3) + (0.6 * 1/3) + (0.45 * 1/3)\n",
+    "print(P)"
    ]
   },
   {
@@ -180,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
